--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^18.1.0",
     "ngx-cookie-service": "^18.0.0",
     "rxjs": "~7.8.0",
+    "socket.io-client": "^4.7.5",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
