--- a/backend/package.json
+++ b/backend/package.json
@@ -34,8 +34,11 @@
     "@socket.io/redis-adapter": "^8.3.0",
     "axios": "^1.7.4",
     "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "ioredis": "^5.4.1",
     "mysql2": "^3.11.0",
+    "nodemailer": "^6.9.15",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
