--- a/backend/package.json
+++ b/backend/package.json
@@ -36,6 +36,7 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "dotenv": "^16.4.7",
     "ioredis": "^5.4.1",
     "mysql2": "^3.11.0",
     "nodemailer": "^6.9.15",
