--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^18.1.0",
     "@angular/platform-browser-dynamic": "^18.1.0",
     "@angular/router": "^18.1.0",
+    "dotenv": "^16.4.7",
     "ngx-cookie-service": "^18.0.0",
     "rxjs": "~7.8.0",
     "socket.io-client": "^4.7.5",
