--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^18.1.0",
     "@angular/router": "^18.1.0",
     "dotenv": "^16.4.7",
+    "kafkajs": "^2.2.4",
     "ngx-cookie-service": "^18.0.0",
     "rxjs": "~7.8.0",
     "socket.io-client": "^4.7.5",
