--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@nestjs/axios": "^3.0.2",
+    "@nestjs/bull": "^11.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
@@ -32,12 +33,16 @@
     "@nestjs/swagger": "^7.4.0",
     "@nestjs/websockets": "^10.4.1",
     "@socket.io/redis-adapter": "^8.3.0",
+    "@valkey/client": "^1.0.0",
     "axios": "^1.7.4",
     "bcrypt": "^5.1.1",
+    "bull": "^4.16.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.7",
-    "ioredis": "^5.4.1",
+    "ioredis": "^5.4.2",
+    "iovalkey": "^0.2.1",
+    "kafkajs": "^2.2.4",
     "mysql2": "^3.11.0",
     "nodemailer": "^6.9.15",
     "passport": "^0.7.0",
